--- a/page-extra/page-spec.html
+++ b/page-extra/page-spec.html
@@ -111,7 +111,7 @@
     </div>
 
     <!-- Footer - Spec start -->
-    <div class="footer" data-aos="fade-up" data-aos-duration="1000">
+    <div class="footer pt-5" data-aos="fade-up" data-aos-duration="1000">
       <div class="desc d-flex justify-content-between gap-5 p-3">
           <div class="data-desc-1">
               <ul class="fw-light">
