--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
         </div>
         <!-- End Halaman Banding -->
     <!-- Start Halaman Footer -->
-    <div class="footer" data-aos="fade-up" data-aos-duration="1000">
+    <div class="footer pt-5" data-aos="fade-up" data-aos-duration="1000">
         <div class="desc d-flex justify-content-between gap-5 p-3">
             <div class="data-desc-1">
                 <ul class="fw-light">
