--- a/page-extra/page-bandingkan.html
+++ b/page-extra/page-bandingkan.html
@@ -198,7 +198,7 @@
     <!-- Content - Bandingkan end -->
 
     <!-- Footer - Spec start -->
-    <div class="footer" data-aos="fade-up" data-aos-duration="1000">
+    <div class="footer pt-5" data-aos="fade-up" data-aos-duration="1000">
       <div class="desc d-flex justify-content-between gap-5 p-3">
           <div class="data-desc-1">
               <ul class="fw-light">
