--- a/page-extra/page-panduan.html
+++ b/page-extra/page-panduan.html
@@ -283,14 +283,16 @@
 
     <!-- Footer - panduan start -->
     <div class="footer pt-5" data-aos="fade-up" data-aos-duration="1000">
-      <div class="desc d-flex justify-content-between gap-5 p-3">
+      <div class="desc d-flex justify-content-between p-3">
           <div class="data-desc-1">
               <ul class="fw-light">
                   <li class="list-group-item fw-bold fst-italic judul-desc">Explore</li>
-                  <li class="p-1 list-group-item">Beranda</li>
-                  <li class="p-1 list-group-item">VR</li>
-                  <li class="p-1 list-group-item">Bandingkan</li>
-                  <li class="p-1 list-group-item">Panduan</li>
+                  <div class="grid">
+                      <li class="p-1  list-group-item"><a href="../index.html#frame1">Beranda</a> </li>
+                      <li class="p-1 list-group-item"><a href="../index.html#frame1">VR</a> </li>
+                      <li class="p-1 list-group-item"><a href="page-bandingkan.html">Bandingkan</a> </li>
+                      <li class="p-1 list-group-item"><a href="page-panduan.html">Panduan</a> </li>
+                  </div>
               </ul>
           </div>
 
@@ -326,7 +328,7 @@
           <div class="bottom">
               <p class="copyright">© Copyright 2024 by The Visionaries</p>
               <div class="social-icons">
-                  <img src="../assets/img/instagram.svg" class="animate-icon">
+                  <a href="https://www.instagram.com/itclubsmkn5bdg/"><img src="../assets/img/instagram.svg" class="animate-icon"></a>              
                   <img src="../assets/img/facebook.svg" class="mx-2 animate-icon">
                   <img src="../assets/img/linkedin.svg" class="me-2 animate-icon">
                   <img src="../assets/img/twitter.svg" class="animate-icon">
