--- a/page-extra/page-bandingkan.html
+++ b/page-extra/page-bandingkan.html
@@ -21,6 +21,7 @@
       position: fixed;
       z-index: 999;
       width: 100%;
+      /* Adjust width as needed */
     }
 
     .nav-button {
@@ -28,22 +29,26 @@
       color: black;
       border-radius: 50%;
       width: 10vw;
+      /* Adjust width based on viewport */
       height: 10vw;
+      /* Maintain aspect ratio */
       display: flex;
       justify-content: center;
       align-items: center;
       cursor: pointer;
       font-size: 2vw;
+      /* Adjust font size based on viewport */
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       position: absolute;
-      top: 0px;
+      top: -50px;
       left: 10px;
       z-index: 1000;
     }
 
     .nav-content {
       position: absolute;
-      top: 7vw;
+      top: -4vw;
+      /* Adjust based on nav-button height */
       left: 15px;
       right: 0;
       width: 80% !important;
@@ -199,14 +204,16 @@
 
     <!-- Footer - Spec start -->
     <div class="footer pt-5" data-aos="fade-up" data-aos-duration="1000">
-      <div class="desc d-flex justify-content-between gap-5 p-3">
+      <div class="desc d-flex justify-content-between p-3">
           <div class="data-desc-1">
               <ul class="fw-light">
                   <li class="list-group-item fw-bold fst-italic judul-desc">Explore</li>
-                  <li class="p-1 list-group-item">Beranda</li>
-                  <li class="p-1 list-group-item">VR</li>
-                  <li class="p-1 list-group-item">Bandingkan</li>
-                  <li class="p-1 list-group-item">Panduan</li>
+                  <div class="grid">
+                      <li class="p-1  list-group-item"><a href="../index.html#frame1">Beranda</a> </li>
+                      <li class="p-1 list-group-item"><a href="../index.html#frame1">VR</a> </li>
+                      <li class="p-1 list-group-item"><a href="page-bandingkan.html">Bandingkan</a> </li>
+                      <li class="p-1 list-group-item"><a href="page-panduan.html">Panduan</a> </li>
+                  </div>
               </ul>
           </div>
 
@@ -242,7 +249,7 @@
           <div class="bottom">
               <p class="copyright">© Copyright 2024 by The Visionaries</p>
               <div class="social-icons">
-                  <img src="../assets/img/instagram.svg" class="animate-icon">
+                  <a href="https://www.instagram.com/itclubsmkn5bdg/"><img src="../assets/img/instagram.svg" class="animate-icon"></a>              
                   <img src="../assets/img/facebook.svg" class="mx-2 animate-icon">
                   <img src="../assets/img/linkedin.svg" class="me-2 animate-icon">
                   <img src="../assets/img/twitter.svg" class="animate-icon">
