--- a/page-extra/page-bandingkan.html
+++ b/page-extra/page-bandingkan.html
@@ -209,10 +209,10 @@
               <ul class="fw-light">
                   <li class="list-group-item fw-bold fst-italic judul-desc">Explore</li>
                   <div class="grid">
-                      <li class="p-1  list-group-item"><a href="../index.html#frame1">Beranda</a> </li>
-                      <li class="p-1 list-group-item"><a href="../index.html#frame1">VR</a> </li>
-                      <li class="p-1 list-group-item"><a href="page-bandingkan.html">Bandingkan</a> </li>
-                      <li class="p-1 list-group-item"><a href="page-panduan.html">Panduan</a> </li>
+                      <li class="p-1 list-group-item"><a class="text-black text-decoration-none" href="../index.html#frame1">Beranda</a> </li>
+                      <li class="p-1 list-group-item"><a class="text-black text-decoration-none" href="../index.html#frame3">VR</a> </li>
+                      <li class="p-1 list-group-item"><a class="text-black text-decoration-none" href="page-bandingkan.html">Bandingkan</a> </li>
+                      <li class="p-1 list-group-item"><a class="text-black text-decoration-none" href="page-panduan.html">Panduan</a> </li>
                   </div>
               </ul>
           </div>
