--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
         <!-- Start Halaman Banding -->
         <div id="frame7" data-aos="fade-up" data-aos-duration="1500">
-            <img src="assets/img/head-vr.png" id="gambartesting" class="mt-5 w-100 animate-vr-img" data-aos="fade-down"
+            <img src="assets/img/head-vr.png" style="object-fit: contain;" id="gambartesting" class="mt-5 w-100 animate-vr-img" data-aos="fade-down"
                 data-aos-duration="1200" />
 
             <div class="row parent-content container-fluid mt-5" data-aos="fade-up" data-aos-duration="1200">
@@ -503,7 +503,7 @@
                         <div class="gambarBanding bawah" data-aos="zoom-in" data-aos-duration="1200"
                             data-aos-delay="700">
                             <img src="assets/img/Rectangle 175.png" class="border-bottom rounded-4 mb-3 a" />
-                            <img src="assets/img/download 5.png" class="border-bottom rounded-4" />
+                            <img src="assets/img/download 5.png" class="border-bottom rounded-4" style="object-fit: contain;" />
                         </div>
                     </div>
 
