--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body class="overflow-x-hidden">
+<body>
         <!-- homepage -->
         <section id="frame1" data-aos="fade-up" data-aos-duration="1000">
             <!-- navbar -->
