--- a/page-extra/page-bandingkan.html
+++ b/page-extra/page-bandingkan.html
@@ -106,7 +106,7 @@
     <!-- Navbar - Bandingkan end -->
 
     <!-- Content - Bandingkan start -->
-    <div class="konten-bandingkan d-flex justify-content-center position-relative gap-2 m-5" data-aos="fade-up"
+    <div class="konten-bandingkan overflow-hidden d-flex justify-content-center position-relative gap-2 m-5" data-aos="fade-up"
       data-aos-duration="1000">
       <div class="filter d-flex flex-column gap-3" data-aos="fade-right" data-aos-duration="1000">
         <div class="w-100 container-desain p-3 rounded-2" data-aos="flip-up" data-aos-duration="1000"
