--- a/page-extra/page-panduan.html
+++ b/page-extra/page-panduan.html
@@ -100,7 +100,7 @@
           <li class="nav-item">
             <a href="page-bandingkan.html">Bandingkan</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a href="page-panduan.html">Panduan</a>
           </li>
           <i class="fa-solid fa-magnifying-glasswed"></i>
